	-- Added and documented HOCON / typesafe config libary support, available if (and only if) 
	   the typesafe config library is included with the application.
	-- Refactored mchange-commons-java to eliminate very rare potential deadlocks under simultaneous
	   ClassLoading of file in cfg and log packages, and defined a facade into the cfg library use of
	   which should eliminate the possibility of such deadlocks if it is used assiduously.
	-- actually documented 'com.mchange.v2.log.jdk14logging.suppressStackWalk'. i said i had earlier
	   but apparently not
	-- set 'com.mchange.v2.log.jdk14logging.suppressStackWalk' to true by default in mchange-commons-java
c3p0-0.9.5-pre1
	-- Included 'com.mchange.v2.log.jdk14logging.suppressStackWalk' in c3p0 docs.
	-- In mchange-commons: Added a config property for jdk14 logging users:
	   'com.mchange.v2.log.jdk14logging.suppressStackWalk' allows clients to speed up logging
	   by suppressing analyzing the stack trace for the caller. (Only the name of the logger will
	   be given.)
	-- Modified DataSource to include an (unsupported) getParentLogger() method for JDK7 builds
	-- Handle JDBC4 Connection.isValid properly
	-- Lots of updates to get c3p0 to proxy and compile JDBC4
	-- Removed some jdk14 support stuff from build.properties
c3p0-0.9.2
	-- Updated documentation re hibernate configuration. (Documentation was several years stale.)
	-- Merged John Sumsion's remarkable integration of c3p0's full SourceForge history into the
	   git repository. (Enormous, huge thanks to John Sumsion!)
c3p0-0.9.2-pre8
	-- Added logging (at level FINE, in com.mchange.v2.c3p0.impl.C3P0PooledConnectionPoolManager) when
	   a pool is initialized for a new authentication within a DataSource.
	-- We now allow users to place an XML formatted config file in arbitrary locations under
	   the classpath (i.e. as ClassLoader resource), including jar file META-INF directories.