@@ -2,6 +2,8 @@ RELEASE NOTES, c3p0-0.9.5
 =========================
 
 + Full JDBC4 support, builds under current JDKs. Yay!
++ Support for logging the SLF4J / logback library
++ Support for configuration via HOCON / typesafe-config files
 
 
 
